# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: gendiff_check.yml
gendiff/: __init__.py
gendiff/formatters/: plain.py
gendiff/modules/: diff.py  generate_diff.py  open_file.py  parser.py  parser_args.py
gendiff/modules/formatters/: apply_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_diff.py  test_formatters.py  test_gendiff.py  test_generate_diff.py  test_value_for_formatter.py
tests/fixtures/: diff_result.txt  diff_result_simple.txt  file1_example.json  file1_example.yml  file2.yml  file2_example.json  file2_example.yml  file_test.json  result_example.txt  result_json.txt  stylish_value_result.txt
