[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
authors = ["Eugen P"]
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


